# valahello2

./: README.md  meson.build
data/: com.github.omig12.valahello2.appdata.xml.in  com.github.omig12.valahello2.desktop.in
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  com.github.omig12.valahello2.pot  de.po  es.po  fr.po  frcd.po  meson.build
src/: Application  Application.vala
